--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-flask==3.0.2
-selenium==4.18.1
-webdriver-manager==4.0.1
-python-dotenv==1.0.1
-flask-wtf==1.2.1
-openai 
+Flask==2.3.3
+selenium==4.15.2
+python-dotenv==1.0.0
+openai==1.3.7
+Werkzeug==2.3.7 
